<resources>
    <string name="app_name">CryptoCurrencyApp</string>

    <!-- Common Resources -->
    <string name="common_error_network_connection">Bağlantı hatası, lütfen tekrar deneyin.</string>
    <string name="common_error_unknown">Bilinmeyen hata.</string>
    <string name="common_error_timeout">Bağlantı zaman aşımına uğradı.</string>
    <string name="common_error_login">Giriş yapma işlemi sırasında bir hata oluştu.</string>
    <string name="common_error_register_password_not_equal">Şifreler aynı değil!</string>
    <string name="common_error_empty_favorites">Favorilerin boş!</string>
    <!-- Common Resources -->

    <!-- Login Resources -->
    <string name="login_header">Lütfen Giriş Yapın</string>
    <string name="login_user_mail">E-Posta Adresi: </string>
    <string name="login_user_password">Şifre: </string>
    <string name="login_user_password_confirm">Şifre Tekrar: </string>
    <string name="login_register">Kayıt Ol</string>
    <string name="login_continue">Giriş</string>
    <string name="login_continue_as_guest">Misafir Olarak Devam Et</string>
    <!-- Login Resources -->

    <!-- Crypto Resources -->
    <string name="crypto_list_header">Binance - Kripto Para Listesi.</string>
    <string name="crypto_list_show_favorite_button">Favori Kripto Paralarım</string>
    <string name="crypto_list_save_favorite_button">Favorilere Ekle</string>
    <string name="crypto_list_search_hint">Kripto Para Ara</string>
    <string name="crypto_detail_refresh_rate">Kripto Para Değeri Yenileme Saniyesi</string>

    <string name="crypto_coin_name">Kripto Para İsmi: %s</string>
    <string name="crypto_coin_symbol">Kripto Para Sembolü: %s</string>
    <string name="crypto_coin_current_price">Güncel Fiyat: %s</string>
    <string name="crypto_coin_price_change_percentage">Günlük Yüzdelik Fiyat Değişimi: %s</string>
    <string name="crypto_favorite_success">Favorilere Eklendi!</string>
    <string name="crypto_empty_hashing_algorithm">Hash Algoritması Mevcut Değil</string>
    <string name="crypto_empty_name">Kripto Para İsmi Mevcut Değil</string>
    <string name="crypto_empty_symbol">Kripto Sembolü Mevcut Değil</string>
    <string name="crypto_empty_description">Kripto Para Detayı Mevcut Değil</string>
    <string name="crypto_empty_price">Kripto Para Değeri Bulunamadı</string>
    <string name="crypto_empty_coin_price_change_percentage">Günlük %lik Değişim Mevcut Değil</string>

    <string name="crypto_coin_list">Kripto Para Liste Ekranı</string>
    <string name="crypto_coin_detail">Kripto Para Detayı Ekranı</string>
    <string name="crypto_coin_favorites">Kripto Para Favoriler Ekranı</string>
    <!-- Crypto Resources -->

</resources>