<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.bkarakoca.cryptocurrencyapp.scene.login.userlogin.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_large">

        <TextView
            android:id="@+id/tvHeaderLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_header"
            app:layout_constraintTop_toTopOf="parent" />

        <com.bkarakoca.cryptocurrencyapp.internal.widget.UserInputView
            android:id="@+id/inputViewEmail"
            textResourceId="@{viewModel.loginEmailTextResId}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_huge"
            app:layout_constraintTop_toBottomOf="@+id/tvHeaderLogin" />

        <com.bkarakoca.cryptocurrencyapp.internal.widget.UserInputView
            android:id="@+id/inputViewPassword"
            textResourceId="@{viewModel.loginPasswordTextResId}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@+id/inputViewEmail" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/login_continue"
            app:layout_constraintTop_toBottomOf="@+id/inputViewPassword" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:text="@string/login_register"
            app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>